Display account name in the account header

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">AccountsNavigationDrawer</string>
+    <string name="app_name">Accounts</string>
 </resources>
